[MSA-17] feat(chat): add Swagger UI
